# fool-platform

./: ERA_III_READINESS_REPORT.md  README.md  package-lock.json  package.json  pyproject.toml  server.js  tsconfig.json  vitest.config.ts
analyst_workspace/: README.md  __init__.py  events.py  runtime.py
architecture/: README.md
connectors/: README.md  __init__.py
contracts/: README.md
domain/: README.md  __init__.py  annotation.py  annotation.ts  case.py  case.ts  chain_of_custody.py  chain_of_custody.ts  classification_level.py  classification_level.ts  common.ts  confidence_score.py  confidence_score.ts  entity.py  entity.ts  event.py  event.ts  evidence.py  evidence.ts  finding.py  finding.ts  identity.py  identity.ts  investigation.py  investigation.ts  relationship.py  relationship.ts  report.py  report.ts  source.py  source.ts  timeline.py  timeline.ts
executive_portal/: README.md  __init__.py  events.py  runtime.py
fool_platform/: README.md  __init__.py
intelligence/: README.md  __init__.py  context.py  session.py
knowledge/: README.md
product_suite/: README.md  __init__.py  events.py  runtime.py
standards/: README.md
threat_hunting/: README.md  __init__.py  events.py  service.py  validation.py
threat_intelligence/: README.md  __init__.py  attribution.py  confidence.py  events.py  evidence.py  lifecycle.py  query.py  registry.py  reporting.py  validation.py  versioning.py
workbench/: README.md  __init__.py  events.py  runtime.py
workflows/: README.md  discovery.yaml  extraction.yaml  investigation.yaml  monitoring.yaml  reporting.yaml  (+1 more)
(+563 files in other folders)
